--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-flask = "^3.0.0"
+flask = {extras = ["async"], version = "^3.0.0"}
+telethon = "^1.33.1"
+python-dotenv = "^1.0.0"
+async = "^0.6.2"
 
 
 [build-system]
