--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ flask = {extras = ["async"], version = "^3.0.0"}
 telethon = "^1.33.1"
 python-dotenv = "^1.0.0"
 async = "^0.6.2"
+flask-sqlalchemy = "^3.1.1"
 
 
 [build-system]
