--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ telethon = "^1.33.1"
 python-dotenv = "^1.0.0"
 async = "^0.6.2"
 flask-sqlalchemy = "^3.1.1"
+psycopg2-binary = "^2.9.9"
 
 
 [build-system]
