--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python-dotenv = "^1.0.0"
 async = "^0.6.2"
 flask-sqlalchemy = "^3.1.1"
 psycopg2-binary = "^2.9.9"
+websockets = "^12.0"
 
 
 [build-system]
